[gd_scene load_steps=4 format=3 uid="uid://dlen2iyxwy2gj"]

[ext_resource type="Script" path="res://gscript_demo/gdscript_demo.gd" id="1_vrmp1"]
[ext_resource type="PackedScene" uid="uid://76cpeynrowca" path="res://datafeel/datafeel_sdk.tscn" id="2_bmqtk"]
[ext_resource type="Texture2D" uid="uid://1wynh2r08u2w" path="res://datafeel/DataFeel_Logo.png" id="3_s0iaf"]

[node name="GDScriptDemo" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vrmp1")

[node name="DatafeelSDK" parent="." instance=ExtResource("2_bmqtk")]

[node name="ConnectedContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisconnectButton" type="Button" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 495.0
offset_top = 69.0
offset_right = 659.0
offset_bottom = 126.0
text = "Disconnect"

[node name="ColorPicker" type="ColorPicker" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 844.0
offset_top = 8.0
offset_right = 1142.0
offset_bottom = 584.0

[node name="VibrateButton" type="Button" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 235.0
offset_top = 69.0
offset_right = 399.0
offset_bottom = 126.0
text = "Vibrate for 1 second"

[node name="StopVibrateButton" type="Button" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 237.0
offset_top = 425.0
offset_right = 401.0
offset_bottom = 482.0
text = "Stop Vibration"

[node name="IntensitySlider" type="HSlider" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 180.0
offset_top = 342.0
offset_right = 451.0
offset_bottom = 388.0
max_value = 1.0
step = 0.05

[node name="FrequencySlider" type="HSlider" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 183.0
offset_top = 227.0
offset_right = 454.0
offset_bottom = 273.0
max_value = 256.0

[node name="TemperatureCSlider" type="HSlider" parent="ConnectedContainer"]
visible = false
layout_mode = 0
offset_left = 483.0
offset_top = 227.0
offset_right = 754.0
offset_bottom = 273.0
max_value = 50.0
value = 25.0

[node name="TemperatureCLabel" type="Label" parent="ConnectedContainer"]
visible = false
layout_mode = 0
offset_left = 546.0
offset_top = 204.0
offset_right = 690.0
offset_bottom = 227.0
text = "Temperature (C)"

[node name="IntensityLabel" type="Label" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 246.0
offset_top = 316.0
offset_right = 390.0
offset_bottom = 339.0
text = "Vibration Intensity"

[node name="FrequencyLabel" type="Label" parent="ConnectedContainer"]
layout_mode = 0
offset_left = 246.0
offset_top = 196.0
offset_right = 403.0
offset_bottom = 219.0
text = "Vibration Frequency"

[node name="DisconnectedContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectButton" type="Button" parent="DisconnectedContainer"]
layout_mode = 0
offset_left = 495.0
offset_top = 301.0
offset_right = 659.0
offset_bottom = 358.0
text = "Connect"

[node name="TextureRect" type="TextureRect" parent="DisconnectedContainer"]
layout_mode = 0
offset_left = 328.0
offset_top = 128.0
offset_right = 864.0
offset_bottom = 264.0
texture = ExtResource("3_s0iaf")
expand_mode = 1
